added basic readme text, start of the DOM

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>Phone Number Look up</title>
 </head>
 <body>
-
+<article>
+	<h1>Phone Number Search</h1>
+	<input type="" name="Search">
+	<button></button>
+</article>
 </body>
 </html>
