roughing out the initial page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 	<title>Phone Number Look up</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 <article>
 	<h1>Phone Number Search</h1>
-	<input type="" name="Search">
-	<button></button>
+	<label for="Search"></label>
+	<input type="Number" name="Search" placeholder="971">
+	<button type="submit"></button>
+	<p></p>
 </article>
 </body>
 </html>
