added icon attribution to about. Loaded icon in search page.

--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
 <body>
 <article>
 	<p>Hic Haec Hoc</p>
+	<p>Search icon made by <a href="https://www.flaticon.com/authors/freepik">FreePik</a>from <a href="www.flaticon.com">www.flaticon.com</a></p>
+	<p>Home icon made by <a href="https://www.flaticon.com/packs/web-essentials">Web Essentials</a> from <a href="www.flaticon.com">www.flaticon.com</a></p>
 </article>
 <footer>
 	<div><a href="index.html">Home</a></div>
