--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>Phone Number Search</h1>
 	<label for="Search"></label>
 	<input type="Number" name="Search" placeholder="971">
-	<button type="submit"></button>
+	<button type="submit"><img src="my-icons-collection/002-security.png"></button>
 	<p></p>
 </article>
 <footer>
