small tweak to phone number displayed and to do list (which is also in github issues)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <article>
 	<h1>Phone Number Search</h1>
 	<label for="Search"></label>
-	<input type="Number" name="Search" placeholder="971">
+	<input type="Number" name="Search" placeholder="9712814297">
 	<button type="submit"><img src="my-icons-collection/002-security.png"></button>
 	<p></p>
 </article>
