--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
 <head>
 	<title>Phone Number Look up</title>
+	<link rel="stylesheet" type="text/css" href="cyborg.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
 </head>
 <body>
 <article>
 	<h1>Phone Number Search</h1>
 	<label for="Search"></label>
 	<input type="Number" name="Search" placeholder="9712814297">
-	<button type="submit"><img src="my-icons-collection/002-security.png"></button>
+	<button id='submit' type="submit"><img src="my-icons-collection/002-security.png"></button>
 	<p></p>
 </article>
 <footer>
 	<div><a href="about.html">About</a></div>
-	<div><a href="Contact">Contact</a></div>
+	<div><a href="contact.html">Contact</a></div>
 </footer>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
