small css improvements. Captures form data and starts sending it to numverify. addition of cyborg css.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <article>
 	<h1>Phone Number Search</h1>
 	<label for="Search"></label>
-	<input type="Number" name="Search" placeholder="9712814297">
+	<input type="Number" name="Search" placeholder="ex. 9712814297">
 	<button id='submit' type="submit"><img src="my-icons-collection/002-security.png"></button>
 	<p></p>
 </article>
